Normal Node shows a hole in its sphere when zoomed in on Retina Display #45149

Closed
opened 2015-06-22 18:18:37 +02:00 by Seth L. · 8 comments

System Information
OS X 10.10.1
Observed on a Retina MacBook Pro
(Can provide more detailed specs soon...)

Blender Version
Broken: 2.74, (and maybe also in 2.75 rc2?)

Short description of error
Firstly, I'm sorry that I haven't had a chance to test this with the latest build on a Retina machine. In two days I expect to have a chance to. Right now I cannot, as I do not have a Retina Display Mac in front of me.
I am posting this earlier than later since a 2.75 release is right around the corner and I don't want to waste valuable time.

Can a user with a Retina Display machine please try this and confirm or deny this interface rendering glitch?

Exact steps for others to reproduce the error

  1. In the Node Editor for materials (Cycles), add a Normal node.
  2. Zoom in as far as you can. You may see a hole appear in the node's white sphere.

Seems like this could be a clipping distance issue caused by a miscalculation when the pixel density is doubled up.

**System Information** OS X 10.10.1 Observed on a Retina MacBook Pro (Can provide more detailed specs soon...) **Blender Version** Broken: 2.74, (and maybe also in 2.75 rc2?) **Short description of error** Firstly, I'm sorry that I haven't had a chance to test this with the latest build on a Retina machine. In two days I expect to have a chance to. Right now I cannot, as I do not have a Retina Display Mac in front of me. I am posting this earlier than later since a 2.75 release is right around the corner and I don't want to waste valuable time. Can a user with a Retina Display machine please try this and confirm or deny this interface rendering glitch? **Exact steps for others to reproduce the error** 1. In the Node Editor for materials (Cycles), add a Normal node. 2. Zoom in as far as you can. You may see a hole appear in the node's white sphere. Seems like this could be a clipping distance issue caused by a miscalculation when the pixel density is doubled up.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @quantumanomaly

Added subscriber: @quantumanomaly

Added subscribers: @JulianEisel, @Psy-Fi, @ideasman42, @Sergey

Added subscribers: @JulianEisel, @Psy-Fi, @ideasman42, @Sergey

@ideasman42, it's easy to reproduce here on linux by bumpting DPI all the way up and then zooming in. Doesn't feel like difficult fix, but wouldn't mind having your inputs here, not so much familiar with the UI drawing area.

Or maybe @JulianEisel/@Psy-Fi will be willing to investigate that piece of code in more details? :)

@ideasman42, it's easy to reproduce here on linux by bumpting DPI all the way up and then zooming in. Doesn't feel like difficult fix, but wouldn't mind having your inputs here, not so much familiar with the UI drawing area. Or maybe @JulianEisel/@Psy-Fi will be willing to investigate that piece of code in more details? :)

This issue was referenced by f0c5ed39ee

This issue was referenced by f0c5ed39ee3101d37f5fbc3031ec95c683515429
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Nice work, Julian!

Nice work, Julian!
Member

You're welcome ;)

You're welcome ;)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45149
No description provided.