Fix T45149: Normal Node shows a hole in its sphere with heigh scale facs